css/styles.css
:root {
	--logo-font: 'Germania One', cursive;
	--main-font: 'Poppins', sans-serif;
}


html {
	box-sizing: border-box;
	font-size: 62.5%;
}
*, *:before, *:after {
	box-sizing: inherit;
	margin: 0;
	padding: 0;
}

body {
	font-size: 16px;
	font-family: var(--main-font);
	height: 100vh;
}

img {
	width: 100%;
}
a {
	text-decoration: none;
	color: #000;
}
.page-wrapper {
	height: 100%;
	display: grid;
	grid-template-columns: 1fr 2fr;
}

/*SIDEBAR*/
.image-sidebar {
	background-image: url("../img/bg-1.jpg");
	background-repeat: no-repeat;
	background-size: cover;
	background-position: 44%;
}
/*LOGO*/
.logo {
	display: flex;
	align-items: center;
	justify-content: center;
	margin-top: 15rem;
	background-color: rgba(0, 0, 0, 0.2);
}
.logo-img {
	width: 10rem;
}
.logo-text {
	color: #FFF;
	font-family: var(--logo-font);
	font-size: 8rem;
	text-transform: uppercase;
}
/*CREDIT*/
.credit {
	font-size: 1.3rem;
	color: #FFF;
	position: absolute;
	bottom: 0;
	left: 10rem;
	padding: 1rem;

}
.credit a {
	color: #fff;
	text-decoration: underline;
}


/*MAIN*/
.main {
	background: #000017;
	display: flex;
	flex-direction: column;
	justify-content: center;
}

.description {
	max-width: 80rem;
	padding: 5rem;
	font-size: 2.6rem;
	font-weight: 600;
	color: #e1e1e1;
}
.description p {
	margin-bottom: 3rem;
}
.description p span {
	font-style: italic;
}

.my-form {
	background-color: #FFF;
	box-shadow: 0 8px 12px #466DFF;
	padding: 3rem 0 3rem 5rem;
	margin-bottom: 4rem;
}
.input-wrapper {
	/*display: flex;
	flex-wrap: wrap;
	align-items: center;
	gap: 2rem 5rem;*/
	display: grid;
	grid-template-columns: repeat(2, 25rem);
	gap: 2rem 5em;
}
.input-container{
	display: flex;
	flex-direction: column;
	gap: .5rem;
}
.my-form h3 {
	margin-bottom: 3rem;
	font-size: 2.5rem;
	font-weight: 600;
}
.my-form label {
	text-transform: uppercase;
	font-size: 1.3rem;
	font-weight: 600;
	color: #696969;
}

.my-form input[type="text"],
.my-form input[type="tel"],
.my-form input[type="email"],
.my-form input[type="password"] {
	height: 3rem;
	background-color: #FFF;
	outline: none;
	border: 2px solid #e1e1e1;
	border-radius: 3px;
	box-shadow: none;
	padding: .6rem;
	font-size: 1.5rem;
} 
.my-form input[type="text"]:focus,
.my-form input[type="tel"]:focus,
.my-form input[type="email"]:focus {
	border: 2px solid #1828F9;
	box-shadow: 1px 1px 3px #647CFF;
}

.my-form input[type="password"]:invalid {
	border: 2px solid red;
}

.my-form input[type="password"]:invalid + span::before {
	content: "* Password do not match";
	font-size: ;
	color: red;
	z-index: 1000;
}
/*BUTTON*/
.submit-btn {
	background-color: #FFF;
	margin-left: 5rem;
	font-weight: 600;
	width: 25rem;
	padding: 1.3rem 0;
	border: none;
	border-radius: 3px;
	color: #000017;
	transition: all 0.3s ease;
}
.submit-btn:hover {
	cursor: pointer;
	box-shadow: 2px 5px 5px #1828F9;
}
.submit-btn:active {
	transform: scale(1.3);
}

